<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logo"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/app_name"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>

</menu>
