<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="ch.epfl.sweng.swissaffinity.MainActivity">

    <TextView
        android:id="@+id/mainWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/welcome_registered_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ExpandableListView
        android:id="@+id/mainEventListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:headerDividersEnabled="true"
        android:smoothScrollbar="true"/>

</LinearLayout>

